--- a/SpringBoots/build.gradle
+++ b/SpringBoots/build.gradle
@@ -29,6 +29,7 @@ repositories {
 dependencies {
     compile 'org.springframework.boot:spring-boot-starter-web'
     compile("org.webjars:jquery:2.0.3-1")
+    compile("org.webjars:angularjs:1.3.8")
     compile("org.thymeleaf:thymeleaf-spring3:2.0.17")
     testCompile("junit:junit:4.11")
     //Required dependency for JSP
